Sun Dec 24 15:20:51 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bsebus.c: BseSummation was recently extended to have three output
	channels (a new one computing the difference), which broke make
	report. This change fixes it, by adapting the hardcoded channel number
	in this file to match the new summation plugin.

Sat Dec 23 20:49:22 2006  Tim Janik  <timj@gtk.org>

	* bseserver.[hcp]*: added bse_server_start_recording() and 
	bse_server_stop_recording() functions to schedule WAV file
	recording for a specific time intervall. 
	added bse-server-start-recording procedure.

	* bsepcmwriter.[hc]: implemented time intervall
	recording.

Tue Dec 19 14:18:53 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* gsloscillator.c: Take transpose factor into account for table
	lookups when the oscillator frequency is constant. Fixes #387364.

Tue Dec 19 02:10:33 2006  Tim Janik  <timj@gtk.org>

	* bsesong.[hc]: keep a flag around to detect the first sequencer underrun,
	reset the flag when prepared.

	* bsesequencer.cc (bse_sequencer_thread_main): always warn about 
	sequencer underruns, regardles of debugging state.

Mon Dec 18 20:14:34 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bsebiquadfilter.c:
	* bseconstant.c:
	* bsestandardosc.c:
	* bseladspamodule.c: Spelling fix: the unit for frequencies is spelled
	"Hertz" (not "Herz").

Sun Dec 17 20:58:40 2006  Tim Janik  <timj@gtk.org>

	* bsestandardosc.c (bse_standard_osc_update_modules): added missing 
	update of the transpose factor to update_modules(), fixes #386862.

Thu Dec 14 23:07:16 2006  Tim Janik  <timj@gtk.org>

	* gslcommon.c (gsl_error_from_errno): special case ENODATA, which is not
	available on GNU/kFreeBSD, reported by Petr Salinger <Petr.Salinger@seznam.cz>.

	* gsldatahandle-vorbis.c (gsl_vorbis1_handle_read): use EIO in unclear
	error cases, because GNU/kFreeBSD lacks ENODATA.

Mon Dec 11 01:13:00 2006  Tim Janik  <timj@gtk.org>
